Implemented 2D lattice visualization component with rich features and debugging
- Fix a bug on the way where the voronoi cell algorithm caused too many vertices and some NaNs. The problem lied in the normalization of neighbors.
- Added rich debugging to the visualization components.
- Updated the wasm pipeline for more transparency.

--- a/rust-core/Cargo.toml
+++ b/rust-core/Cargo.toml
@@ -56,7 +56,7 @@ criterion = { version = "0.6", features = ["html_reports"] }
 
 [features]
 # default = ["hdf5"]
-default = ["hdf5", "ws3d_voro", "voronoice"]
+# default = ["hdf5", "ws3d_voro", "voronoice"]
 plotting = ["plotters"]
 benchmarks = ["criterion"]
 hdf5 = ["dep:hdf5"]
