--- a/web/apps/website/package.json
+++ b/web/apps/website/package.json
@@ -72,6 +72,8 @@
     "react-konva": "^19.0.3",
     "react-syntax-highlighter": "^15.0.0",
     "react-tooltip": "^5.28.1",
+    "rehype-katex": "7.0.1",
+    "remark-math": "^6.0.0",
     "semver": "^7.7.1",
     "swr": "^2.3.3",
     "tailwindcss": "^4.0.0",
