--- a/web/apps/website/tsconfig.json
+++ b/web/apps/website/tsconfig.json
@@ -31,6 +31,11 @@
       }
     ]
   },
+  "mdx": {
+    "plugins": [
+      "remark-math"
+    ]
+  },
   "references": [],
   "include": [
     "app",
