Updated rust file structure and python bindings
- The rust python binding now reflects the file structure of the original rust code
- This way, maintenance and extension should be much easier and straightforward now
- Also added a convenience routine to the Makefile (make python) to build the python bindings

--- a/rust-python/pyproject.toml
+++ b/rust-python/pyproject.toml
@@ -1,16 +1,15 @@
 [project]
 name = "moire-lattice-py"
-version = "0.1.0"
+version = "0.1.1"
 description = "High-performance Python bindings for moire lattice calculations"
 authors = [{name = "Rene-Marcel Lehner", email = "rene.lehner@tu-dortmund.de"}]
-license = {text = "MIT OR Apache-2.0"}
+license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
-    "License :: OSI Approved :: Apache Software License", 
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
