--- a/rust-python/pyproject.toml
+++ b/rust-python/pyproject.toml
@@ -28,7 +28,7 @@ Repository = "https://github.com/rnle/msl"
 Documentation = "https://rnle.github.io/msl"
 
 [project.optional-dependencies]
-dev = ["pytest>=6.0", "numpy>=1.20", "matplotlib>=3.3"]
+dev = ["pytest>=6.0", "numpy>=1.20,<2.0", "matplotlib>=3.3"]
 viz = ["matplotlib>=3.3", "plotly>=5.0"]
 
 [build-system]
