--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -18,11 +18,42 @@ services:
       - /repo/apps/website/.next
     working_dir: /repo/apps/website
 
-  msl_website_prod:
+  # msl_website_prod:
+  #   build:
+  #     context: .
+  #     dockerfile: docker/website.Dockerfile
+  #     target: builder
+  #   command: ["/bin/sh", "-c", "mkdir -p /out && cp -r /repo/apps/website/out/* /out"]
+  #   volumes:
+  #     - ./out:/out
+
+  msl_ml_research:
     build:
       context: .
-      dockerfile: docker/website.Dockerfile
-      target: builder
-    command: ["/bin/sh", "-c", "mkdir -p /out && cp -r /repo/apps/website/out/* /out"]
+      dockerfile: docker/ml-research.Dockerfile
+      target: development
+    ports:
+      - "8888:8888"  # Jupyter Lab
     volumes:
-      - ./out:/out
+      # Mount the research directory
+      - ../research/multi_moire_construction:/workspace/notebooks
+      # Mount data directory (create if needed)
+      - ../data:/workspace/data
+      # Persistent storage for models and results
+      - ml_models:/workspace/models
+      - ml_results:/workspace/results
+    environment:
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+    working_dir: /workspace/notebooks
+
+volumes:
+  ml_models:
+  ml_results:
