--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,13 @@ rust-python/dist/
 rust-python/build/
 *.so
 
+# Ignore media files
 *.png
 *.gif
+
+# Ignore datasets
+*.hdf5
+*.h5
 
 # WASM generated files
 rust-wasm/pkg/
