--- a/rust-python/Cargo.toml
+++ b/rust-python/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 # Core lattice library
-moire-lattice = { workspace = true, features = ["hdf5"] }
+moire-lattice = { workspace = true }
 
 # Python bindings
 pyo3.workspace = true
@@ -31,4 +31,4 @@ thiserror.workspace = true
 log.workspace = true
 
 [build-dependencies]
-pyo3-build-config = "0.25"
+pyo3-build-config = "0.26"
