Add Python bindings for Bravais lattice types, Moire2D lattices, and Polyhedron
- Implemented Python wrappers for Bravais2D and Bravais3D lattice types, including methods for creating various lattice types and retrieving their properties.
- Added Python bindings for Moire2D, enabling the creation of Moiré lattices from base lattices and transformations, along with methods to access lattice data and properties.
- Introduced a Polyhedron wrapper to represent Wigner-Seitz cells and Brillouin zones, providing access to vertices, edges, faces, and measures.
- Developed a comprehensive test suite for the bindings, covering lattice creation, properties, transformations, and Bravais types.
- Added a detailed documentation section on the envelope approximation for photonic Moiré cavities, outlining the theoretical framework and practical workflow.

--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -27,33 +27,33 @@ services:
   #   volumes:
   #     - ./out:/out
 
-  msl_ml_research:
-    build:
-      context: .
-      dockerfile: docker/ml-research.Dockerfile
-      target: development
-    ports:
-      - "8888:8888"  # Jupyter Lab
-    volumes:
-      # Mount the research directory
-      - ../research/multi_moire_construction:/workspace/notebooks
-      # Mount data directory (create if needed)
-      - ../data:/workspace/data
-      # Persistent storage for models and results
-      - ml_models:/workspace/models
-      - ml_results:/workspace/results
-    environment:
-      - NVIDIA_VISIBLE_DEVICES=all
-      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
-    working_dir: /workspace/notebooks
+#   msl_ml_research:
+#     build:
+#       context: .
+#       dockerfile: docker/ml-research.Dockerfile
+#       target: development
+#     ports:
+#       - "8888:8888"  # Jupyter Lab
+#     volumes:
+#       # Mount the research directory
+#       - ../research/multi_moire_construction:/workspace/notebooks
+#       # Mount data directory (create if needed)
+#       - ../data:/workspace/data
+#       # Persistent storage for models and results
+#       - ml_models:/workspace/models
+#       - ml_results:/workspace/results
+#     environment:
+#       - NVIDIA_VISIBLE_DEVICES=all
+#       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+#     deploy:
+#       resources:
+#         reservations:
+#           devices:
+#             - driver: nvidia
+#               count: all
+#               capabilities: [gpu]
+#     working_dir: /workspace/notebooks
 
-volumes:
-  ml_models:
-  ml_results:
+# volumes:
+#   ml_models:
+#   ml_results:
