Refactor LatticeVisualization2D component and update WASM bindings
- Updated LatticeVisualization2D to use new Lattice2D and Moire2D types.
- Refactored vector and vertex handling to accommodate new API.
- Improved error handling and validation for lattice points and vertices.
- Adjusted Docker configuration to change host port mapping from 3000 to 3001.
- Added comprehensive README for rust-wasm with project structure, usage, and building instructions.
- Introduced configuration and interface modules for better organization in rust-wasm.
- Implemented lattice and polyhedron modules with WASM-compatible wrappers.
- Enhanced symmetry operations and high symmetry points handling in WASM bindings.
- Added utility functions for logging and panic handling in WASM.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ rust-python/target/
 rust-wasm/target/
 
 # Python 
+**/__pycache__/
 rust-python/python/__pycache__/
 rust-python/python/**/__pycache__/
 rust-python/python/**/*.pyc
