--- a/research/moire_envelope/configs/phase1_config.yaml
+++ b/research/moire_envelope/configs/phase1_config.yaml
@@ -11,7 +11,8 @@ effective_moire_scale: 10.0  # For monolayer: effective "moiré scale" as multip
 
 # ===== Twist Geometry =====
 tau: [0.0, 0.0]  # Stacking gauge vector (default: no shift)
-eta: 1.0  # Twist center gauge (default: 1.0)
+eta: auto  # Twist center gauge; use 'auto' for a/L_moire
+default_theta_deg: 1.1  # Default twist applied to monolayer candidates
 
 # ===== MPB Computation Settings =====
 phase1_resolution: 16  # MPB resolution (lower for speed, typical: 16-32)
