Add Phase 2 to Phase 5 results and validation reports for candidate 1737
- Introduced CSV and markdown reports for Phase 2 operator info, meta, and diagnostics.
- Added Phase 3 eigenvalues and report detailing solver parameters and eigenvalue results.
- Included Phase 4 bandstructure and validation summary, capturing k-point data and mode characteristics.
- Implemented Phase 5 Q-factor results and report, summarizing Meep validation outcomes.
- Created regression tests for the fd4 stencil in Phase 2, ensuring hermiticity of the mass term with and without velocity gradient terms.

--- a/research/environment.yml
+++ b/research/environment.yml
@@ -16,6 +16,7 @@ dependencies:
   # Electromagnetic simulation
   - pymeep=*=mpi_mpich_*
   - mpb=*=mpi_mpich_*
+  - mpi4py
   - h5py
   - hdf5
   - fftw
