--- a/research/moire_envelope/Makefile
+++ b/research/moire_envelope/Makefile
@@ -2,7 +2,7 @@ SHELL := /bin/bash
 
 ENV_NAME ?= msl
 MPIRUN ?= mpirun
-NPROC ?= 4
+NPROC ?= 1
 RUN_DIR ?= auto
 PHASE0_CONFIG ?= configs/phase0_real_run.yaml
 PHASE1_CONFIG ?= configs/phase1_real_run.yaml
@@ -17,13 +17,21 @@ PYTHON ?= python
 phase0:
 	$(MAMBA) run -n $(ENV_NAME) $(PYTHON) phases/phase0_candidate_search.py $(PHASE0_CONFIG)
 
+.PHONY: phase0.5
+phase0.5:
+	$(MAMBA) run -n $(ENV_NAME) $(PYTHON) phases/phase0p5_convergence.py $(RUN_DIR) configs/phase0p5_config.yaml
+
+.PHONY: phase0.5_%
+phase0.5_%:
+	MSL_PHASE0P5_CANDIDATE_ID=$* $(MAMBA) run -n $(ENV_NAME) $(PYTHON) phases/phase0p5_convergence.py $(RUN_DIR) configs/phase0p5_config.yaml
+
 .PHONY: phase1_serial
 
 .PHONY: phase0_grid
 
 .PHONY: phase1_%
 phase1_%:
-	MSL_PHASE1_CANDIDATE_ID=$* $(MAMBA) run -n $(ENV_NAME) $(PYTHON) phases/phase1_local_bloch.py latest $(PHASE1_CONFIG)
+	MSL_PHASE1_CANDIDATE_ID=$* $(MAMBA) run -n $(ENV_NAME) $(MPIRUN) -n $(NPROC) $(PYTHON) phases/phase1_local_bloch.py latest $(PHASE1_CONFIG)
 phase0_grid:
 	MSL_PHASE0_DISABLE_OPT=1 $(MAMBA) run -n $(ENV_NAME) $(PYTHON) phases/phase0_candidate_search.py $(PHASE0_CONFIG)
 
@@ -35,9 +43,17 @@ phase0_optimize:
 phase1:
 	$(MAMBA) run -n $(ENV_NAME) $(MPIRUN) -n $(NPROC) $(PYTHON) phases/phase1_local_bloch.py $(RUN_DIR) $(PHASE1_CONFIG)
 
+.PHONY: phase1_quick
+phase1_quick:
+	$(MAMBA) run -n $(ENV_NAME) $(MPIRUN) -n $(NPROC) $(PYTHON) phases/phase1_local_bloch.py $(RUN_DIR) configs/phase1_quick.yaml
+
 .PHONY: phase1_serial
 phase1_serial:
 	$(MAMBA) run -n $(ENV_NAME) $(PYTHON) phases/phase1_local_bloch.py $(RUN_DIR) $(PHASE1_CONFIG)
+
+.PHONY: phase1_quick_%
+phase1_quick_%:
+	MSL_PHASE1_CANDIDATE_ID=$* $(MAMBA) run -n $(ENV_NAME) $(MPIRUN) -n $(NPROC) $(PYTHON) phases/phase1_local_bloch.py $(RUN_DIR) configs/phase1_quick.yaml
 
 .PHONY: phase2
 phase2:
@@ -50,6 +66,14 @@ phase3:
 .PHONY: phase4
 phase4:
 	$(MAMBA) run -n $(ENV_NAME) $(PYTHON) phases/phase4_validation.py $(RUN_DIR) $(PHASE4_CONFIG)
+
+.PHONY: phase4_quick
+phase4_quick:
+	$(MAMBA) run -n $(ENV_NAME) $(PYTHON) phases/phase4_validation.py $(RUN_DIR) configs/phase4_quick.yaml
+
+.PHONY: phase4_quick_%
+phase4_quick_%:
+	MSL_PHASE4_CANDIDATE_ID=$* $(MAMBA) run -n $(ENV_NAME) $(PYTHON) phases/phase4_validation.py $(RUN_DIR) configs/phase4_quick.yaml
 
 .PHONY: phase5
 phase5:
