--- a/research/moire_envelope/configs/phase1_config.yaml
+++ b/research/moire_envelope/configs/phase1_config.yaml
@@ -5,8 +5,8 @@
 K_candidates: 5  # Number of top candidates from Phase 0 to process
 
 # ===== Moiré Spatial Grid =====
-phase1_Nx: 32  # Number of grid points in x direction
-phase1_Ny: 32  # Number of grid points in y direction
+phase1_Nx: 64  # Number of grid points in x direction
+phase1_Ny: 64  # Number of grid points in y direction
 effective_moire_scale: 10.0  # For monolayer: effective "moiré scale" as multiple of lattice constant
 
 # ===== Twist Geometry =====
@@ -17,12 +17,17 @@ default_theta_deg: 1.1  # Default twist applied to monolayer candidates
 # ===== MPB Computation Settings =====
 phase1_resolution: 16  # MPB resolution (lower for speed, typical: 16-32)
 phase1_dk: 0.01  # Finite difference step in k-space (units of 2π/a)
+phase1_fd_order: 4  # Finite-difference accuracy for derivatives (2 or 4)
 num_bands: 8  # Number of bands to compute
 quiet_mpb: true  # Suppress MPB stdout/stderr
+phase1_auto_from_phase0p5: true  # Inherit resolution/Δk recommendations when Phase 0.5 exists
 
 # ===== Parallelization =====
-phase1_parallel: true  # Use parallel processing for grid points
-phase1_max_workers: 4  # Number of parallel workers (adjust based on CPU cores)
+phase1_parallel: true  # Use MPI ranks (mpirun -n <R>) to distribute registry points
+phase1_max_workers: 4  # Legacy knob for older multiprocessing path; kept for compatibility only
+phase1_registry_progress_stride: 8
+phase1_rank_logging: false
+phase1_rank_logging_stride: 128
 
 # ===== Reference Frequency =====
 # Options: 'min', 'max', 'mean', 'median'
